syntax = "proto3";

package v1;
import "werft.proto";

// WerftUI offers services intended for the webui
service WerftUI {
    // ListJobSpecs returns a list of jobs that can be started through the UI.
    rpc ListJobSpecs(ListJobSpecsRequest) returns (stream ListJobSpecsResponse) {};
}

message ListJobSpecsRequest{}

message ListJobSpecsResponse {
    Repository repo = 1;
    string name = 2;
    string description = 3;
    repeated DesiredAnnotation arguments = 4;
}

// DesiredAnnotation describes an annotation a job should have
message DesiredAnnotation {
    string name = 1;
    bool required = 2;
    string description = 3;
}
